Removed Exp field.

--- a/about.html
+++ b/about.html
@@ -127,16 +127,16 @@
                         </div>
 
                         <div class="exp mt-5 ftco-animate">
-                            <h2 class="mb-4">Experience</h2>
-                            <div class="exp-wrap py-4">
-                                <div class="desc">
-                                    <h4> Hey I'm a Fresher. <span> </span></h4>
-                                    <p class="location">none</p>
-                                </div>
-                                <div class="year">
-                                    <p>None</p>
-                                </div>
-                            </div>
+<!--                            <h2 class="mb-4">Experience</h2>-->
+<!--                            <div class="exp-wrap py-4">-->
+<!--                                <div class="desc">-->
+<!--                                    <h4> Hey I'm a Fresher. <span> </span></h4>-->
+<!--                                    <p class="location">none</p>-->
+<!--                                </div>-->
+<!--                                <div class="year">-->
+<!--                                    <p>None</p>-->
+<!--                                </div>-->
+<!--                            </div>-->
 
                             <!-- <div class="exp-wrap py-4">
                                 <div class="desc">
