Added Google drive link for the resume.

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                             <div class="p-5">
                                 <h2 class="mb-5">Hi! I'm Nova Sangeeth</h2>
                                 <p>Welcome to my website, I am a Web Developer who is passionate about learning new
-                                    technologies and creating ideal web applications.</p>
+                                    technologies, solving real world problems and creating ideal web applications.</p>
                                 <p><a href="#">Checkout my resume</a></p>
                                 <ul class="ftco-footer-social list-unstyled mt-4">
                                     <li class="ftco-animate"><a href="https://www.facebook.com/nova.sangeeth"><span
