--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
                                 <h2 class="mb-5">Hi! I'm Nova Sangeeth</h2>
                                 <p>To secure a challenging position in a reputable organization to expand my learnings,
                                     knowledge, and skills.</p>
-                                <p><a href="#">Checkout my resume</a></p>
+                                <p><a href="https://drive.google.com/open?id=1-P0ggJt00j7onQPJVHCpDj2oNM6So7iG">Checkout my resume</a></p>
                                 <ul class="ftco-footer-social list-unstyled mt-4">
                                     <li class="ftco-animate"><a href="https://www.facebook.com/nova.sangeeth"><span
                                             class="icon-facebook"></span></a></li>
