--- a/portfolio.html
+++ b/portfolio.html
@@ -83,7 +83,7 @@
                 <div class="row no-gutters">
                     <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
                         <a href="portfolio-single.html" class="image d-flex justify-content-center align-items-center"
-                           style="background-image: url('images/work-1.jpg'); "
+                           style="background-image: url('images/blog_2.png'); "
                            data-scrollax=" properties: { translateY: '-30%'}">
                             <div class="icon d-flex text-center justify-content-center align-items-center">
                                 <span class="icon-search"></span>
@@ -186,21 +186,6 @@
                                 control</a></h2>
                             <p>Nothing yet</p>
                             <p><a href="#">View Project</a></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="row mt-5">
-                    <div class="col text-center">
-                        <div class="block-27">
-                            <ul>
-                                <li><a href="#">&lt;</a></li>
-                                <li class="active"><span>1</span></li>
-                                <li><a href="#">2</a></li>
-                                <li><a href="#">3</a></li>
-                                <li><a href="#">4</a></li>
-                                <li><a href="#">5</a></li>
-                                <li><a href="#">&gt;</a></li>
-                            </ul>
                         </div>
                     </div>
                 </div>
