--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
                                 <h3 class="heading">Django</h3>
                                 <h3 class="heading">Flask</h3>
                                 <h3 class="heading">React</h3>
+                                <h3 class="heading">Mongo DB</h3>
                             </div>
                         </div>
                     </div>
@@ -165,6 +166,7 @@
                                 <h3 class="heading">Python</h3>
                                 <h3 class="heading">JavaScript</h3>
                                 <h3 class="heading">HTML/CSS</h3>
+                                <h3 class="heading">Git</h3>
                             </div>
                         </div>
                     </div>
