--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                                 <h2 class="mb-5">Hi! I'm Nova Sangeeth</h2>
                                 <p>Welcome to my website, I am a Web Developer who is passionate about learning new
                                     technologies, solving real world problems and creating ideal web applications.</p>
-                                <p><a href="#">Checkout my resume</a></p>
+                                <p><a href="https://drive.google.com/open?id=1-P0ggJt00j7onQPJVHCpDj2oNM6So7iG">Checkout my resume</a></p>
                                 <ul class="ftco-footer-social list-unstyled mt-4">
                                     <li class="ftco-animate"><a href="https://www.facebook.com/nova.sangeeth"><span
                                             class="icon-facebook"></span></a></li>
