added gdrive link to the home page.

--- a/portfolio.html
+++ b/portfolio.html
@@ -85,34 +85,34 @@
                         <a href="portfolio-single.html" class="image d-flex justify-content-center align-items-center"
                            style="background-image: url('images/blog_2.png'); "
                            data-scrollax=" properties: { translateY: '-30%'}">
-                            <div class="icon d-flex text-center justify-content-center align-items-center">
-                                <span class="icon-search"></span>
-                            </div>
+                            <!--                            <div class="icon d-flex text-center justify-content-center align-items-center">-->
+                            <!--                                <span class="icon-search"></span>-->
+                            <!--                            </div>-->
                         </a>
                         <div class="text">
                             <h4 class="subheading">Application</h4>
-                            <h2 class="heading"><a href="portfolio-single.html">A Blog Application using Flask</a></h2>
-                            <p>A simple blog app using Flask Web Framework for backned and HTML/CSS for the front end.
+                            <h2 class="heading">A Blog Application using Flask</h2>
+                            <p>A simple blog app using Flask Web Framework for backend and HTML/CSS for the front end.
                                 SQLite is used for the data storage option. </p>
                             <p><a href="#">View Project</a></p>
-                            <ul class="ftco-footer-social list-unstyled">
-                                <li class="ftco-animate"><a href="https://github.com/nova-sangeeth"><span
-                                        class="icon-github"></span></a></li>
-                            </ul>
+                            <!--                            <ul class="ftco-footer-social list-unstyled">-->
+                            <!--                                <li class="ftco-animate"><a href="https://github.com/nova-sangeeth"><span-->
+                            <!--                                        class="icon-github"></span></a></li>-->
+                            <!--                            </ul>-->
                         </div>
                     </div>
                     <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
                         <a href="portfolio-single.html"
                            class="image order-2 d-flex justify-content-center align-items-center"
-                           style="background-image: url('images/work-2.jpg'); "
+                           style="background-image: url('images/Weather Application.png'); "
                            data-scrollax=" properties: { translateY: '-30%'}">
-                            <div class="icon d-flex text-center justify-content-center align-items-center">
-                                <span class="icon-search"></span>
-                            </div>
+                            <!--                            <div class="icon d-flex text-center justify-content-center align-items-center">-->
+                            <!--                                <span class="icon-search"></span>-->
+                            <!--                            </div>-->
                         </a>
                         <div class="text order-1">
                             <h4 class="subheading">Application</h4>
-                            <h2 class="heading"><a href="portfoli-singleo.html">Weather Application</a></h2>
+                            <h2 class="heading">Weather Application</h2>
                             <p>A simple Weather application using Django and Open Weather API</p>
                             <p><a href="#">View Project</a></p>
                             <ul class="ftco-footer-social list-unstyled">
@@ -123,14 +123,14 @@
                     </div>
                     <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
                         <a href="portfolio-single.html" class="image d-flex justify-content-center align-items-center"
-                           style="background-image: url('images/work-3.jpg'); "
+                           style="background-image: url('images/Weather Application.png'); "
                            data-scrollax=" properties: { translateY: '-30%'}">
-                            <div class="icon d-flex text-center justify-content-center align-items-center">
-                                <span class="icon-search"></span>
-                            </div>
+                            <!--                            <div class="icon d-flex text-center justify-content-center align-items-center">-->
+                            <!--                                <span class="icon-search"></span>-->
+                            <!--                            </div>-->
                         </a>
                         <div class="text">
-                            <h4 class="subheading">Web Design</h4>
+                            <h4 class="subheading">.NET Application.</h4>
                             <h2 class="heading"><a href="portfolio-single.html">Airline Reservation and Management
                                 System.</a></h2>
                             <p>Airline Reservation and Management System is a application built using Visual Basic.NET
@@ -141,53 +141,21 @@
                     <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
                         <a href="portfolio-single.html"
                            class="image order-2 d-flex justify-content-center align-items-center"
-                           style="background-image: url('images/work-4.jpg'); "
+                           style="background-image: url('images/Chat_5.png'); "
                            data-scrollax=" properties: { translateY: '-30%'}">
-                            <div class="icon d-flex text-center justify-content-center align-items-center">
-                                <span class="icon-search"></span>
-                            </div>
+                            <!--                            <div class="icon d-flex text-center justify-content-center align-items-center">-->
+                            <!--                                <span class="icon-search"></span>-->
+                            <!--                            </div>-->
                         </a>
                         <div class="text order-1">
                             <h4 class="subheading">Application</h4>
-                            <h2 class="heading"><a href="portfoli-singleo.html">Even the all-powerful Pointing has no
-                                control</a></h2>
-                            <p>Nothing yet</p>
+                            <h2 class="heading"><a href="portfoli-singleo.html">Chat room Application</a></h2>
+                            <p>Chat room application using sockets and Flask </p>
                             <p><a href="#">View Project</a></p>
                         </div>
                     </div>
-                    <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-                        <a href="portfolio-single.html" class="image d-flex justify-content-center align-items-center"
-                           style="background-image: url('images/work-5.jpg'); "
-                           data-scrollax=" properties: { translateY: '-30%'}">
-                            <div class="icon d-flex text-center justify-content-center align-items-center">
-                                <span class="icon-search"></span>
-                            </div>
-                        </a>
-                        <div class="text">
-                            <h4 class="subheading">Animation</h4>
-                            <h2 class="heading"><a href="portfoli-singleo.html">Even the all-powerful Pointing has no
-                                control</a></h2>
-                            <p>Nothing yet</p>
-                            <p><a href="#">View Project</a></p>
-                        </div>
-                    </div>
-                    <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-                        <a href="portfolio-single.html"
-                           class="image order-2 d-flex justify-content-center align-items-center"
-                           style="background-image: url('images/work-6.jpg'); "
-                           data-scrollax=" properties: { translateY: '-30%'}">
-                            <div class="icon d-flex text-center justify-content-center align-items-center">
-                                <span class="icon-search"></span>
-                            </div>
-                        </a>
-                        <div class="text order-1">
-                            <h4 class="subheading">Branding</h4>
-                            <h2 class="heading"><a href="portfoli-singleo.html">Even the all-powerful Pointing has no
-                                control</a></h2>
-                            <p>Nothing yet</p>
-                            <p><a href="#">View Project</a></p>
-                        </div>
-                    </div>
+
+
                 </div>
             </div>
         </section>
