added gdrive link to the home page.

--- a/services.html
+++ b/services.html
@@ -90,6 +90,7 @@
                                 <h3 class="heading">Django</h3>
                                 <h3 class="heading">Flask</h3>
                                 <h3 class="heading">React</h3>
+                                <h3 class="heading">Mongo DB</h3>
                             </div>
                         </div>
                     </div>
@@ -100,6 +101,7 @@
                                 <h3 class="heading">HTML/CSS</h3>
                                 <h3 class="heading">Python</h3>
                                 <h3 class="heading">JavaScript</h3>
+                                <h3 class="heading">Git</h3>
                             </div>
                         </div>
                     </div>
