--- a/portfolio.html
+++ b/portfolio.html
@@ -123,7 +123,7 @@
                     </div>
                     <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
                         <a href="portfolio-single.html" class="image d-flex justify-content-center align-items-center"
-                           style="background-image: url('images/Weather Application.png'); "
+                           style="background-image: url('images/airline admin page.png'); "
                            data-scrollax=" properties: { translateY: '-30%'}">
                             <!--                            <div class="icon d-flex text-center justify-content-center align-items-center">-->
                             <!--                                <span class="icon-search"></span>-->
