--- a/about.html
+++ b/about.html
@@ -112,22 +112,21 @@
                         <div class="profile ftco-animate">
                             <h2 class="mb-4">Profile</h2>
                             <h4 class="mb-4">I'm a web developer. I aim to make a difference through my skills.</h4>
-                            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
-                                there live the blind texts. Separated they live in Bookmarksgrove right at the coast of
-                                the Semantics, a large language ocean.</p>
-                            <div class="row my-5">
-                                <div class="col-md-6">
-                                    <!-- <p><strong>Name:</strong> <span>Nova Sangeeth</span></p> -->
-                                    <p><strong>Address:</strong>
-                                        <span> 67/311, Guna Villas Mount Road, Coonoor - 643102</span></p>
-                                    <!-- <p><strong>Phone:</strong> <span>(123)-456-789</span></p> -->
-                                </div>
-                                <!-- <div class="col-md-6">
-                                    <p><strong>Name:</strong> <span>Nova Sangeeth</span></p>
-                                    <p><strong>Address:</strong> <span>88 West 21th Street, Suite 721 New York NY 10016</span></p>
-                                    <p><strong>Phone:</strong> <span>(123)-456-789</span></p>
-                                </div> -->
-                            </div>
+                            <p>I have a solid knowledge and experience in programming Web Applications.
+                            I am  proficient in languages like Python,JavaScript, HTML and CSS.</p>
+<!--                            <div class="row my-5">-->
+<!--                                <div class="col-md-6">-->
+<!--                                     <p><strong>Name:</strong> <span>Nova Sangeeth</span></p> -->
+<!--                                    <p><strong>Address:</strong>-->
+<!--                                        <span> 67/311, Guna Villas Mount Road, Coonoor - 643102</span></p>-->
+<!--                                     <p><strong>Phone:</strong> <span>(123)-456-789</span></p> -->
+<!--                                </div>-->
+<!--                                &lt;!&ndash; <div class="col-md-6">-->
+<!--                                    <p><strong>Name:</strong> <span>Nova Sangeeth</span></p>-->
+<!--                                    <p><strong>Address:</strong> <span>88 West 21th Street, Suite 721 New York NY 10016</span></p>-->
+<!--                                    <p><strong>Phone:</strong> <span>(123)-456-789</span></p>-->
+<!--                                </div> &ndash;&gt;-->
+<!--                            </div>-->
                         </div>
 
                         <div class="exp mt-5 ftco-animate">
