--- a/portfolio.html
+++ b/portfolio.html
@@ -77,7 +77,7 @@
                 <div class="row justify-content-center mb-5 pb-5">
                     <div class="col-md-7 text-center heading-section ftco-animate">
                         <span>Portfolio</span>
-                        <h2>Checkout a few of my works</h2>
+                        <h2>My Works</h2>
                     </div>
                 </div>
                 <div class="row no-gutters">
@@ -94,7 +94,7 @@
                             <h2 class="heading">A Blog Application using Flask</h2>
                             <p>A simple blog app using Flask Web Framework for backend and HTML/CSS for the front end.
                                 SQLite is used for the data storage option. </p>
-                            <p><a href="#">View Project</a></p>
+                            <p><a href="https://github.com/nova-sangeeth/Flask__blog__main">View Project Source</a></p>
                             <!--                            <ul class="ftco-footer-social list-unstyled">-->
                             <!--                                <li class="ftco-animate"><a href="https://github.com/nova-sangeeth"><span-->
                             <!--                                        class="icon-github"></span></a></li>-->
@@ -114,11 +114,11 @@
                             <h4 class="subheading">Application</h4>
                             <h2 class="heading">Weather Application</h2>
                             <p>A simple Weather application using Django and Open Weather API</p>
-                            <p><a href="#">View Project</a></p>
-                            <ul class="ftco-footer-social list-unstyled">
-                                <li class="ftco-animate"><a href="https://github.com/nova-sangeeth"><span
-                                        class="icon-github"></span></a></li>
-                            </ul>
+                            <p><a href="https://github.com/nova-sangeeth/Weather-Application">View Project Source</a></p>
+<!--                            <ul class="ftco-footer-social list-unstyled">-->
+<!--                                <li class="ftco-animate"><a href="https://github.com/nova-sangeeth"><span-->
+<!--                                        class="icon-github"></span></a></li>-->
+<!--                            </ul>-->
                         </div>
                     </div>
                     <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
@@ -135,7 +135,7 @@
                                 System.</a></h2>
                             <p>Airline Reservation and Management System is a application built using Visual Basic.NET
                                 and SQL server as the Database.</p>
-                            <p><a href="#">View Project</a></p>
+                            <p><a href="https://github.com/nova-sangeeth/Airline-Reservation-and-managment">View Project Source</a></p>
                         </div>
                     </div>
                     <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
@@ -151,7 +151,7 @@
                             <h4 class="subheading">Application</h4>
                             <h2 class="heading"><a href="portfoli-singleo.html">Chat room Application</a></h2>
                             <p>Chat room application using sockets and Flask </p>
-                            <p><a href="#">View Project</a></p>
+                            <p><a href="#">View Project Source</a></p>
                         </div>
                     </div>
 
