added logo changes to the pages

--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
                     <div class="col-md-12">
                         <div class="colorlib-navbar-brand">
                             <a class="colorlib-logo" href="index.html"><span class="logo-img"
-                                                                             style="background-image: url(images/person_1.jpg);"></span>Nova
+                                                                             style="background-image: url(images/nova_logo.png);"></span>Nova
                                 Sangeeth</a>
                         </div>
                         <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
@@ -73,10 +73,10 @@
 
         <section class="ftco-section about-section">
             <div class="container">
-                <div class="row d-flex my-5" data-scrollax-parent="true">
-                    <div class="col-md-4 author-img" style="background-image: url(images/author-1.jpg);"
-                         data-scrollax=" properties: { translateY: '-70%'}">
-                    </div>
+<!--                <div class="row d-flex my-5" data-scrollax-parent="true">-->
+<!--                    <div class="col-md-4 author-img" style="background-image: url(images/author-1.jpg);"-->
+<!--                         data-scrollax=" properties: { translateY: '-70%'}">-->
+<!--                    </div>-->
                     <div class="col-md-2"></div>
                     <div class="col-md-6 wrap ftco-animate">
                         <div class="about-desc">
@@ -113,20 +113,20 @@
                             <h2 class="mb-4">Profile</h2>
                             <h4 class="mb-4">I'm a web developer. I aim to make a difference through my skills.</h4>
                             <p>I have a solid knowledge and experience in programming Web Applications.
-                            I am  proficient in languages like Python,JavaScript, HTML and CSS.</p>
-<!--                            <div class="row my-5">-->
-<!--                                <div class="col-md-6">-->
-<!--                                     <p><strong>Name:</strong> <span>Nova Sangeeth</span></p> -->
-<!--                                    <p><strong>Address:</strong>-->
-<!--                                        <span> 67/311, Guna Villas Mount Road, Coonoor - 643102</span></p>-->
-<!--                                     <p><strong>Phone:</strong> <span>(123)-456-789</span></p> -->
-<!--                                </div>-->
-<!--                                &lt;!&ndash; <div class="col-md-6">-->
-<!--                                    <p><strong>Name:</strong> <span>Nova Sangeeth</span></p>-->
-<!--                                    <p><strong>Address:</strong> <span>88 West 21th Street, Suite 721 New York NY 10016</span></p>-->
-<!--                                    <p><strong>Phone:</strong> <span>(123)-456-789</span></p>-->
-<!--                                </div> &ndash;&gt;-->
-<!--                            </div>-->
+                                I am proficient in languages like Python,JavaScript, HTML and CSS.</p>
+                            <!--                            <div class="row my-5">-->
+                            <!--                                <div class="col-md-6">-->
+                            <!--                                     <p><strong>Name:</strong> <span>Nova Sangeeth</span></p> -->
+                            <!--                                    <p><strong>Address:</strong>-->
+                            <!--                                        <span> 67/311, Guna Villas Mount Road, Coonoor - 643102</span></p>-->
+                            <!--                                     <p><strong>Phone:</strong> <span>(123)-456-789</span></p> -->
+                            <!--                                </div>-->
+                            <!--                                &lt;!&ndash; <div class="col-md-6">-->
+                            <!--                                    <p><strong>Name:</strong> <span>Nova Sangeeth</span></p>-->
+                            <!--                                    <p><strong>Address:</strong> <span>88 West 21th Street, Suite 721 New York NY 10016</span></p>-->
+                            <!--                                    <p><strong>Phone:</strong> <span>(123)-456-789</span></p>-->
+                            <!--                                </div> &ndash;&gt;-->
+                            <!--                            </div>-->
                         </div>
 
                         <div class="exp mt-5 ftco-animate">
