--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
     <nav id="colorlib-main-nav" role="navigation">
         <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle active"><i></i></a>
         <div class="js-fullheight colorlib-table">
-            <div class="img" style="background-image: url(images/author-2.jpg);"></div>
+            <div class="img" style="background-image: url(images/nova_logo.png);"></div>
             <div class="colorlib-table-cell js-fullheight">
                 <div class="row no-gutters">
                     <div class="col-md-12 text-center">
@@ -54,7 +54,7 @@
                     <div class="col-md-12">
                         <div class="colorlib-navbar-brand">
                             <a class="colorlib-logo" href="index.html"><span class="logo-img"
-                                                                             style="background-image: url(images/person_1.jpg);"></span>Nova
+                                                                             style="background-image: url(images/nova_logo.png);"></span>Nova
                                 Sangeeth</a>
                         </div>
                         <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
