--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <nav id="colorlib-main-nav" role="navigation">
         <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle active"><i></i></a>
         <div class="js-fullheight colorlib-table">
-            <!-- <div class="img" style="background-image: url(images/author-2.jpg);"></div> -->
+<!--             <div class="img" style="background-image: url(images/nova_logo.png);"></div>-->
             <div class="colorlib-table-cell js-fullheight">
                 <div class="row no-gutters">
                     <div class="col-md-12 text-center">
@@ -49,12 +49,12 @@
 
     <div id="colorlib-page">
         <header>
-            <div class="container">
+            <div class="container"> 
                 <div class="row">
                     <div class="col-md-12">
                         <div class="colorlib-navbar-brand">
                             <a class="colorlib-logo" href="index.html"><span class="logo-img"
-                                                                             style="background-image: url(images/person_1.jpg);"></span>Nova
+                                                                             style="background-image: url(images/nova_logo.png);"></span>Nova
                                 Sangeeth</a>
                         </div>
                         <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
@@ -97,8 +97,8 @@
         <section class="ftco-section about-section">
             <div class="container">
                 <div class="row d-flex" data-scrollax-parent="true">
-                    <div class="col-md-4 author-img" style="background-image: url(images/author-1.jpg);"
-                         data-scrollax=" properties: { translateY: '-70%'}"></div>
+<!--                    <div class="col-md-4 author-img" style="background-image: url(images/author-1.jpg);"-->
+<!--                         data-scrollax=" properties: { translateY: '-70%'}"></div>-->
                     <div class="col-md-2"></div>
                     <div class="col-md-6 wrap ftco-animate">
                         <div class="about-desc">
