--- a/portfolio.html
+++ b/portfolio.html
@@ -63,7 +63,7 @@
                     <div class="col-md-12">
                         <div class="colorlib-navbar-brand">
                             <a class="colorlib-logo" href="index.html"><span class="logo-img"
-                                                                             style="background-image: url(images/person_1.jpg);"></span>Nova
+                                                                             style="background-image: url(images/nova_logo.png);"></span>Nova
                                 Sangeeth</a>
                         </div>
                         <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
