changes to the project Desc.

--- a/portfolio.html
+++ b/portfolio.html
@@ -93,7 +93,7 @@
                             <h4 class="subheading">Application</h4>
                             <h2 class="heading">A Blog Application using Flask</h2>
                             <p>A simple blog app using Flask Web Framework for backend and HTML/CSS for the front end.
-                                SQLite is used for the data storage option. </p>
+                                SQLite is used as the Database. </p>
                             <p><a href="https://github.com/nova-sangeeth/Flask__blog__main">View Project Source</a></p>
                             <!--                            <ul class="ftco-footer-social list-unstyled">-->
                             <!--                                <li class="ftco-animate"><a href="https://github.com/nova-sangeeth"><span-->
