removed phone numbers and email address.

--- a/contact.html
+++ b/contact.html
@@ -70,22 +70,22 @@
                         <h2 class="h4">Contact Information</h2>
                     </div>
                     <div class="w-100"></div>
-                    <div class="col-md-3">
-                        <p><span>Address:</span></p>
-                        <p> 67/311, Guna Villas, Mount Road, Coonoor, The Nilgiris, Tamil Nadu - 643102</p>
-                    </div>
-                    <div class="col-md-3">
-                        <p><span>Phone:</span></p>
-                        <p><a href="tel:950-024-6428"> +91 950-024-6428</a></p>
-                    </div>
+<!--                    <div class="col-md-3">-->
+<!--                        <p><span>Address:</span></p>-->
+<!--                        <p> 67/311, Guna Villas, Mount Road, Coonoor, The Nilgiris, Tamil Nadu - 643102</p>-->
+<!--                    </div>-->
+<!--                    <div class="col-md-3">-->
+<!--                        <p><span>Phone:</span></p>-->
+<!--                        <p><a href="tel:950-024-6428"> +91 950-024-6428</a></p>-->
+<!--                    </div>-->
                     <div class="col-md-3">
                         <p><span>Email:</span></p>
                         <p><a href="mailto:novasangeeth@gmail.com">novasangeeth@gmail.com</a></p>
                     </div>
-                    <div class="col-md-3">
-                        <p><span>Website:</span></p>
-                        <p><a href="www.novasangeeth.com">novasangeeth.com</a></p>
-                    </div>
+<!--                    <div class="col-md-3">-->
+<!--                        <p><span>Website:</span></p>-->
+<!--                        <p><a href="www.novasangeeth.com">novasangeeth.com</a></p>-->
+<!--                    </div>-->
                 </div>
                 <div class="row block-9">
                     <div class="col-md-6 pr-md-5">
