--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                                 </ul>
                                 <h5>Contact me here!</h5>
                                 <p>Email: <a href="mailto:novasangeeth@gmail.com">novasangeeth@gmail.com</a></p>
-                                <p>Phone: <a href="tel:950-024-6428">+91 (950)-024-6428</a></p>
+<!--                                <p>Phone: <a href="tel:950-024-6428">+91 (950)-024-6428</a></p>-->
                             </div>
                         </div>
                     </div>
