Changed the application desc

--- a/portfolio.html
+++ b/portfolio.html
@@ -175,9 +175,8 @@
                             <div class="text">
                                 <h4 class="subheading">Application</h4>
                                 <h2 class="heading">URL Shortner Application</h2>
-                                <p>A URL Shortner application which enables the user to shorten the long urls generated
-                                    by websites and turn them into small ones.
-                                    The User can add custom slugs to the shortened url to customize it as desired.
+                                <p>A URL Shortner application which enables the user to shorten the urls
+                                    The User can also add custom slugs to the shortened url to customize it as desired.
                                 </p>
                                 <p><a href="https://github.com/nova-sangeeth/drix-url">View Project Source</a>
                                 </p>
