--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>Nova's Portfolio - about </title>
     <meta charset="utf-8">
@@ -26,57 +27,58 @@
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
-<div class="KW_progressContainer">
-    <div class="KW_progressBar">
+    <div class="KW_progressContainer">
+        <div class="KW_progressBar">
 
-    </div>
-</div>
-<div class="page">
-    <nav id="colorlib-main-nav" role="navigation">
-        <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle active"><i></i></a>
-        <div class="js-fullheight colorlib-table">
-            <!--            <div class="img" style="background-image: url(images/author-2.jpg);"></div>-->
-            <div class="colorlib-table-cell js-fullheight">
-                <div class="row no-gutters">
-                    <div class="col-md-12 text-center">
-                        <h1 class="mb-4"><a href="index.html" class="logo">Nova Sangeeth</a></h1>
-                        <ul>
-                            <li><a href="index.html"><span><small>01</small>Home</span></a></li>
-                            <li class="active"><a href="about.html"><span><small>02</small>Resume</span></a></li>
-                            <li><a href="services.html"><span><small>03</small>Technical Skills</span></a></li>
-                            <li><a href="portfolio.html"><span><small>04</small>Portfolio</span></a></li>
-                            <li><a href="contact.html"><span><small>05</small>Contact</span></a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
         </div>
-    </nav>
-
-    <div id="colorlib-page">
-        <header>
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="colorlib-navbar-brand">
-                            <a class="colorlib-logo" href="index.html"><span class="logo-img"
-                                                                             style="background-image: url(images/nova_logo.png);"></span>Nova
-                                Sangeeth</a>
+    </div>
+    <div class="page">
+        <nav id="colorlib-main-nav" role="navigation">
+            <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle active"><i></i></a>
+            <div class="js-fullheight colorlib-table">
+                <!--            <div class="img" style="background-image: url(images/author-2.jpg);"></div>-->
+                <div class="colorlib-table-cell js-fullheight">
+                    <div class="row no-gutters">
+                        <div class="col-md-12 text-center">
+                            <h1 class="mb-4"><a href="index.html" class="logo">Nova Sangeeth</a></h1>
+                            <ul>
+                                <li><a href="index.html"><span><small>01</small>Home</span></a></li>
+                                <li class="active"><a href="about.html"><span><small>02</small>Resume</span></a></li>
+                                <li><a href="services.html"><span><small>03</small>Technical Skills</span></a></li>
+                                <li><a href="portfolio.html"><span><small>04</small>Portfolio</span></a></li>
+                                <li><a href="contact.html"><span><small>05</small>Contact</span></a></li>
+                            </ul>
                         </div>
-                        <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
                     </div>
                 </div>
             </div>
-        </header>
+        </nav>
 
-        <section class="ftco-section about-section">
-            <div class="container">
-<!--                <div class="row d-flex my-5" data-scrollax-parent="true">-->
-<!--                    <div class="col-md-4 author-img" style="background-image: url(images/author-1.jpg);"-->
-<!--                         data-scrollax=" properties: { translateY: '-70%'}">-->
-<!--                    </div>-->
+        <div id="colorlib-page">
+            <header>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="colorlib-navbar-brand">
+                                <a class="colorlib-logo" href="index.html"><span class="logo-img"
+                                        style="background-image: url(images/nova_logo.png);"></span>Nova
+                                    Sangeeth</a>
+                            </div>
+                            <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
+                        </div>
+                    </div>
+                </div>
+            </header>
+
+            <section class="ftco-section about-section">
+                <div class="container">
+                    <!--                <div class="row d-flex my-5" data-scrollax-parent="true">-->
+                    <!--                    <div class="col-md-4 author-img" style="background-image: url(images/author-1.jpg);"-->
+                    <!--                         data-scrollax=" properties: { translateY: '-70%'}">-->
+                    <!--                    </div>-->
                     <div class="col-md-2"></div>
                     <div class="col-md-6 wrap ftco-animate">
                         <div class="about-desc">
@@ -86,22 +88,22 @@
                                 <p>To secure a challenging position in a reputable organization to expand my learnings,
                                     knowledge, and skills.</p>
                                 <p><a href="https://drive.google.com/open?id=1-P0ggJt00j7onQPJVHCpDj2oNM6So7iG">Checkout
-                                    My Resume.</a></p>
+                                        My Resume.</a></p>
 
                                 <ul class="ftco-footer-social list-unstyled mt-4">
-                                    <li class="ftco-animate"><a href="https://www.facebook.com/nova.sangeeth"><span
+                                    <!-- <li class="ftco-animate"><a href="https://www.facebook.com/nova.sangeeth"><span
                                             class="icon-facebook"></span></a></li>
                                     <li class="ftco-animate"><a href="https://www.instagram.com/novasangeeth/"><span
-                                            class="icon-instagram"></span></a></li>
+                                            class="icon-instagram"></span></a></li> -->
                                     <li class="ftco-animate"><a
                                             href="https://www.linkedin.com/in/nova-s-70825aa1/"><span
-                                            class="icon-linkedin"></span></a></li>
+                                                class="icon-linkedin"></span></a></li>
                                     <li class="ftco-animate"><a href="https://github.com/nova-sangeeth"><span
-                                            class="icon-github"></span></a></li>
+                                                class="icon-github"></span></a></li>
                                 </ul>
                                 <h5>Contact me here!</h5>
                                 <p>Email: <a href="mailto:novasangeeth@gmail.com">novasangeeth@gmail.com</a></p>
-<!--                                <p>Phone: <a href="tel:950-024-6428">+91 (950)-024-6428</a></p>-->
+                                <!--                                <p>Phone: <a href="tel:950-024-6428">+91 (950)-024-6428</a></p>-->
 
                             </div>
                         </div>
@@ -290,7 +292,7 @@
                                   </div>
                               </div>
             </div> -->
-            </div>
+        </div>
         </section>
 
         <footer class="ftco-footer ftco-bg-dark ftco-section">
@@ -299,14 +301,14 @@
                     <div class="col-md-5 text-center">
                         <div class="ftco-footer-widget mb-5">
                             <ul class="ftco-footer-social list-unstyled">
-                                <li class="ftco-animate"><a href="https://www.facebook.com/nova.sangeeth"><span
-                                        class="icon-facebook"></span></a></li>
+                                <!-- <li class="ftco-animate"><a href="https://www.facebook.com/nova.sangeeth"><span
+                                            class="icon-facebook"></span></a></li>
                                 <li class="ftco-animate"><a href="https://www.instagram.com/novasangeeth/"><span
-                                        class="icon-instagram"></span></a></li>
+                                            class="icon-instagram"></span></a></li> -->
                                 <li class="ftco-animate"><a href="https://www.linkedin.com/in/nova-s-70825aa1/"><span
-                                        class="icon-linkedin"></span></a></li>
+                                            class="icon-linkedin"></span></a></li>
                                 <li class="ftco-animate"><a href="https://github.com/nova-sangeeth"><span
-                                        class="icon-github"></span></a></li>
+                                            class="icon-github"></span></a></li>
                             </ul>
                         </div>
                         <div class="ftco-footer-widget">
@@ -327,34 +329,36 @@
     <!-- loader -->
     <div id="ftco-loader" class="show fullscreen">
         <svg class="circular" width="48px" height="48px">
-            <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/>
+            <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" />
             <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10"
-                    stroke="#F96D00"/>
+                stroke="#F96D00" />
         </svg>
     </div>
 
-</div>
+    </div>
 
-</div>
+    </div>
 
 
-<script src="js/jquery.min.js"></script>
-<script src="js/jquery-migrate-3.0.1.min.js"></script>
-<script src="js/popper.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/jquery.easing.1.3.js"></script>
-<script src="js/jquery.waypoints.min.js"></script>
-<script src="js/jquery.stellar.min.js"></script>
-<script src="js/owl.carousel.min.js"></script>
-<script src="js/jquery.magnific-popup.min.js"></script>
-<script src="js/aos.js"></script>
-<script src="js/jquery.animateNumber.min.js"></script>
-<script src="js/scrollax.min.js"></script>
-<script src="js/bootstrap-datepicker.js"></script>
-<script src="js/jquery.timepicker.min.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-<script src="js/google-map.js"></script>
-<script src="js/main.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/jquery-migrate-3.0.1.min.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery.easing.1.3.js"></script>
+    <script src="js/jquery.waypoints.min.js"></script>
+    <script src="js/jquery.stellar.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
+    <script src="js/jquery.magnific-popup.min.js"></script>
+    <script src="js/aos.js"></script>
+    <script src="js/jquery.animateNumber.min.js"></script>
+    <script src="js/scrollax.min.js"></script>
+    <script src="js/bootstrap-datepicker.js"></script>
+    <script src="js/jquery.timepicker.min.js"></script>
+    <script
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
+    <script src="js/google-map.js"></script>
+    <script src="js/main.js"></script>
 
 </body>
+
 </html>
