--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
                   <p><a href="https://drive.google.com/open?id=1-P0ggJt00j7onQPJVHCpDj2oNM6So7iG">Checkout my resume</a>
                   </p>
                   <ul class="ftco-footer-social list-unstyled mt-4">
-                    <li class="ftco-animate"><a href="https://www.facebook.com/nova.sangeeth"><span
+                    <!-- <li class="ftco-animate"><a href="https://www.facebook.com/nova.sangeeth"><span
                           class="icon-facebook"></span></a></li>
                     <li class="ftco-animate"><a href="https://www.instagram.com/novasangeeth/"><span
-                          class="icon-instagram"></span></a></li>
+                          class="icon-instagram"></span></a></li> -->
                     <li class="ftco-animate"><a href="https://www.linkedin.com/in/nova-s-70825aa1/"><span
                           class="icon-linkedin"></span></a></li>
                     <li class="ftco-animate"><a href="https://github.com/nova-sangeeth"><span
@@ -317,10 +317,10 @@
             <div class="ftco-footer-widget mb-5">
               <ul class="ftco-footer-social list-unstyled">
 
-                <li class="ftco-animate"><a href="https://www.facebook.com/nova.sangeeth"><span
+                <!-- <li class="ftco-animate"><a href="https://www.facebook.com/nova.sangeeth"><span
                       class="icon-facebook"></span></a></li>
                 <li class="ftco-animate"><a href="https://www.instagram.com/novasangeeth/"><span
-                      class="icon-instagram"></span></a></li>
+                      class="icon-instagram"></span></a></li> -->
                 <li class="ftco-animate"><a href="https://www.linkedin.com/in/nova-s-70825aa1/"><span
                       class="icon-linkedin"></span></a></li>
                 <li class="ftco-animate"><a href="https://github.com/nova-sangeeth"><span
