--- a/portfolio.html
+++ b/portfolio.html
@@ -198,10 +198,10 @@
                             <div class="ftco-footer-widget mb-5">
                                 <ul class="ftco-footer-social list-unstyled">
                                     <!-- <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li> -->
-                                    <li class="ftco-animate"><a href="https://www.facebook.com/nova.sangeeth"><span
+                                    <!-- <li class="ftco-animate"><a href="https://www.facebook.com/nova.sangeeth"><span
                                                 class="icon-facebook"></span></a></li>
                                     <li class="ftco-animate"><a href="https://www.instagram.com/novasangeeth/"><span
-                                                class="icon-instagram"></span></a></li>
+                                                class="icon-instagram"></span></a></li> -->
                                     <li class="ftco-animate"><a
                                             href="https://www.linkedin.com/in/nova-s-70825aa1/"><span
                                                 class="icon-linkedin"></span></a></li>
