Added Fast api to the skills list.

--- a/services.html
+++ b/services.html
@@ -91,8 +91,9 @@
                                 <div class="media-body">
                                     <h3 class="heading">Django</h3>
                                     <h3 class="heading">Flask</h3>
-                                    <h3 class="heading">Heroku</h3>
                                     <h3 class="heading">PostgreSQL</h3>
+                                    <h3 class="heading">FastAPI</h3>
+                                    <h3 class="heading">Heroku</h3>
                                 </div>
                             </div>
                         </div>
