removed the contact form for now.

--- a/contact.html
+++ b/contact.html
@@ -84,12 +84,12 @@
                             <p><span>Email:</span></p>
                             <p><a href="mailto:novasangeeth@gmail.com">novasangeeth@gmail.com</a></p>
                         </div>
-                        <!--                    <div class="col-md-3">-->
-                        <!--                        <p><span>Website:</span></p>-->
-                        <!--                        <p><a href="www.novasangeeth.com">novasangeeth.com</a></p>-->
-                        <!--                    </div>-->
+                                           <!-- <div class="col-md-3">
+                                               <p><span>Website:</span></p>
+                                               <p><a href="www.novasangeeth.com">novasangeeth.com</a></p>
+                                           </div> -->
                     </div>
-                    <div class="row block-9">
+                    <!-- <div class="row block-9">
                         <div class="col-md-6 pr-md-5">
                             <form action="#">
                                 <div class="form-group">
@@ -111,8 +111,8 @@
                             </form>
 
                         </div>
-                        <!-- <div class="col-md-6" id="map"></div> -->
-                    </div>
+                         <div class="col-md-6" id="map"></div> 
+                    </div> -->
                 </div>
             </section>
 
