--- a/index.html
+++ b/index.html
@@ -154,10 +154,9 @@
               <div class="media block-6 services p-3 py-4 d-block text-center">
                 <div class="icon mb-3"><span class="icon-gears"></span></div>
                 <div class="media-body">
-                  <h3 class="heading">Django</h3>
-                  <h3 class="heading">Flask</h3>
+                  <h3 class="heading">Django/Flask/FastAPI</h3>
+                  <h3 class="heading">Docker</h3>
                   <h3 class="heading">PostgreSQL</h3>
-                  <h3 class="heading">FastAPI</h3>
                   <h3 class="heading">Heroku</h3>
                 </div>
               </div>
@@ -168,8 +167,6 @@
                 <div class="media-body">
                   <h3 class="heading">Python</h3>
                   <h3 class="heading">JavaScript</h3>
-                  <h3 class="heading">HTML/CSS</h3>
-                  <h3 class="heading">Git</h3>
                 </div>
               </div>
             </div>
