--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               data-scrollax-parent="true">
               <div class="col-md-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
                 <p><a href="#" class="scroll">I'm a</a></p>
-                <h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}">A Web
+                <h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}">A Full Stack
                   Developer.</h1>
               </div>
             </div>
@@ -107,7 +107,7 @@
                 <h1 class="bold-text">About</h1>
                 <div class="p-5">
                   <h2 class="mb-5">Hi! I'm Nova Sangeeth</h2>
-                  <p>Welcome to my website, I am a Web Developer who is passionate about learning new
+                  <p>Welcome to my website, I am a Full Stack Developer who is passionate about learning new
                     technologies, solving real world problems and creating ideal web applications.</p>
                   <p><a href="https://drive.google.com/open?id=1-P0ggJt00j7onQPJVHCpDj2oNM6So7iG">Checkout my resume</a>
                   </p>
