--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               data-scrollax-parent="true">
               <div class="col-md-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
                 <p><a href="#" class="scroll">I'm a</a></p>
-                <h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}">A Full Stack
+                <h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}">Full Stack
                   Developer.</h1>
               </div>
             </div>
@@ -112,10 +112,6 @@
                   <p><a href="https://drive.google.com/open?id=1-P0ggJt00j7onQPJVHCpDj2oNM6So7iG">Checkout my resume</a>
                   </p>
                   <ul class="ftco-footer-social list-unstyled mt-4">
-                    <!-- <li class="ftco-animate"><a href="https://www.facebook.com/nova.sangeeth"><span
-                          class="icon-facebook"></span></a></li>
-                    <li class="ftco-animate"><a href="https://www.instagram.com/novasangeeth/"><span
-                          class="icon-instagram"></span></a></li> -->
                     <li class="ftco-animate"><a href="https://www.linkedin.com/in/nova-s-70825aa1/"><span
                           class="icon-linkedin"></span></a></li>
                     <li class="ftco-animate"><a href="https://github.com/nova-sangeeth"><span
@@ -123,7 +119,6 @@
                   </ul>
                   <h5>Contact me here!</h5>
                   <p>Email: <a href="mailto:novasangeeth@gmail.com">novasangeeth@gmail.com</a></p>
-                  <!--                                <p>Phone: <a href="tel:950-024-6428">+91 (950)-024-6428</a></p>-->
                 </div>
               </div>
             </div>
@@ -156,8 +151,8 @@
                 <div class="media-body">
                   <h3 class="heading">Django/Flask/FastAPI</h3>
                   <h3 class="heading">Docker</h3>
-                  <h3 class="heading">PostgreSQL</h3>
-                  <h3 class="heading">Heroku</h3>
+                  <h3 class="heading">PostgreSQL/MySQL</h3>
+                  <h3 class="heading">Azure/DigitalOcean/AWS/Vercel</h3>
                 </div>
               </div>
             </div>
@@ -166,7 +161,7 @@
                 <div class="icon mb-3"><span class="icon-code"></span></div>
                 <div class="media-body">
                   <h3 class="heading">Python</h3>
-                  <h3 class="heading">JavaScript</h3>
+                  <h3 class="heading">JavaScript/TypeScript</h3>
                 </div>
               </div>
             </div>
