update the resume link and format index and about pages.

--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
                                 <h2 class="mb-5">Hi! I'm Nova Sangeeth</h2>
                                 <p>To secure a challenging position in a reputable organization to expand my learnings,
                                     knowledge, and skills.</p>
-                                <p><a href="https://drive.google.com/open?id=1-P0ggJt00j7onQPJVHCpDj2oNM6So7iG">Checkout
+                                <p><a href="https://drive.google.com/file/d/1Q2QGR2rvCEZh2AMkcTSUf2YsS5B5iIkr/view?usp=share_link">Checkout
                                         My Resume.</a></p>
 
                                 <ul class="ftco-footer-social list-unstyled mt-4">
