--- a/about.html
+++ b/about.html
@@ -190,7 +190,7 @@
 
                             <div class="exp-wrap py-4">
                                 <div class="desc">
-                                    <h3>Bachelors of Science in Computer Technology </h3>
+                                    <h3>Bachelors in Computer Technology </h3>
                                     <h4>CMS College of Science and Commerce</h4>
                                     <p class="location">Coimbatore</p>
                                 </div>
