--- a/services.html
+++ b/services.html
@@ -91,9 +91,17 @@
                                 <div class="media-body">
                                     <h3 class="heading">Django</h3>
                                     <h3 class="heading">Flask</h3>
-                                    <h3 class="heading">PostgreSQL</h3>
                                     <h3 class="heading">FastAPI</h3>
+                                    <h3 class="heading">PostgreSQL</h3>
+                                    <h3 class="heading">MySQL</h3>
+                                    <h3 class="heading">Azure</h3>
+                                    <h3 class="heading">AWS</h3>
+                                    <h3 class="heading">DigitalOcean</h3>
+                                    <h3 class="heading">Docker</h3>
+                                    <h3 class="heading">Kubernetes</h3>
+                                    <h3 class="heading">Vercel</h3>
                                     <h3 class="heading">Heroku</h3>
+                                    <h3 class="heading">Git/GitHub/GitLab</h3>
                                 </div>
                             </div>
                         </div>
@@ -101,10 +109,9 @@
                             <div class="media block-6 services p-3 py-4 d-block text-center">
                                 <div class="icon mb-3"><span class="icon-code"></span></div>
                                 <div class="media-body">
-                                    <h3 class="heading">HTML/CSS</h3>
                                     <h3 class="heading">Python</h3>
                                     <h3 class="heading">JavaScript</h3>
-                                    <h3 class="heading">Git</h3>
+                                    <h3 class="heading">TypeScript</h3>
                                 </div>
                             </div>
                         </div>
