update the technical skills section

--- a/index.html
+++ b/index.html
@@ -205,6 +205,8 @@
                   <div class="icon mb-3"><span class="icon-layers"></span></div>
                   <div class="media-body">
                     <h3 class="heading">Web Development</h3>
+                    <h3 class="heading">Testing and Automation</h3>
+                    <h3 class="heading">Ops</h3>
                     <h3 class="heading">CI/CD</h3>
                     <h3 class="heading">Responsive UI/UX Design</h3>
                   </div>
@@ -216,10 +218,17 @@
                 >
                   <div class="icon mb-3"><span class="icon-gears"></span></div>
                   <div class="media-body">
-                    <h3 class="heading">Django/Flask/FastAPI</h3>
+                    <h3 class="heading">Django</h3>
+                    <h3 class="heading">Flask</h3>
+                    <h3 class="heading">FastAPI</h3>
+                    <h3 class="heading">PostgreSQL</h3>
+                    <h3 class="heading">MySQL</h3>
+                    <h3 class="heading">Azure</h3>
+                    <h3 class="heading">DigitalOcean</h3>
                     <h3 class="heading">Docker</h3>
-                    <h3 class="heading">PostgreSQL/MySQL</h3>
-                    <h3 class="heading">Azure/DigitalOcean/AWS/Vercel</h3>
+                    <h3 class="heading">Vercel</h3>
+                    <h3 class="heading">Heroku</h3>
+                    <h3 class="heading">Git/GitHub/GitLab</h3>
                   </div>
                 </div>
               </div>
@@ -230,7 +239,8 @@
                   <div class="icon mb-3"><span class="icon-code"></span></div>
                   <div class="media-body">
                     <h3 class="heading">Python</h3>
-                    <h3 class="heading">JavaScript/TypeScript</h3>
+                    <h3 class="heading">JavaScript</h3>
+                    <h3 class="heading">TypeScript</h3>
                   </div>
                 </div>
               </div>
