--- a/services.html
+++ b/services.html
@@ -110,6 +110,8 @@
                   <div class="icon mb-3"><span class="icon-layers"></span></div>
                   <div class="media-body">
                     <h3 class="heading">Web Development</h3>
+                    <h3 class="heading">Testing and Automation</h3>
+                    <h3 class="heading">Ops</h3>
                     <h3 class="heading">CI/CD</h3>
                     <h3 class="heading">Responsive UI/UX Design</h3>
                   </div>
@@ -127,10 +129,8 @@
                     <h3 class="heading">PostgreSQL</h3>
                     <h3 class="heading">MySQL</h3>
                     <h3 class="heading">Azure</h3>
-                    <h3 class="heading">AWS</h3>
                     <h3 class="heading">DigitalOcean</h3>
                     <h3 class="heading">Docker</h3>
-                    <h3 class="heading">Kubernetes</h3>
                     <h3 class="heading">Vercel</h3>
                     <h3 class="heading">Heroku</h3>
                     <h3 class="heading">Git/GitHub/GitLab</h3>
