--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     class="mb-3"
                     data-scrollax="properties: {translateY: '30%', opacity: 1.6}"
                   >
-                    Full Stack Developer.
+                    Full Stack Developer
                   </h1>
                 </div>
               </div>
