--- a/contact.html
+++ b/contact.html
@@ -150,10 +150,6 @@
               <div class="col-md-5 text-center">
                 <div class="ftco-footer-widget mb-5">
                   <ul class="ftco-footer-social list-unstyled">
-                    <!-- <li class="ftco-animate"><a href="https://www.facebook.com/nova.sangeeth"><span
-                                        class="icon-facebook"></span></a></li>
-                                <li class="ftco-animate"><a href="https://www.instagram.com/novasangeeth/"><span
-                                        class="icon-instagram"></span></a></li> -->
                     <li class="ftco-animate">
                       <a href="https://www.linkedin.com/in/nova-s-70825aa1/"
                         ><span class="icon-linkedin"></span
@@ -177,13 +173,7 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-md-12 text-center">
-                <p>
-                  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                  <!-- Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true" style="color: red;"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a> -->
-                  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                </p>
-              </div>
+              <div class="col-md-12 text-center"></div>
             </div>
           </div>
         </footer>
