Change to re-order the skills,

--- a/about.html
+++ b/about.html
@@ -163,9 +163,8 @@
                   skills.
                 </h4>
                 <p>
-                  I have a solid knowledge and experience in programming Web
-                  Applications. I am proficient in languages like
-                  Python,JavaScript, HTML and CSS.
+                  I have a solid knowledge and experience in developing Web
+                  Applications.
                 </p>
               </div>
               <div class="exp mt-5 ftco-animate"></div>
