--- a/index.html
+++ b/index.html
@@ -205,9 +205,9 @@
                   <div class="icon mb-3"><span class="icon-layers"></span></div>
                   <div class="media-body">
                     <h3 class="heading">Web Development</h3>
-                    <h3 class="heading">Testing and Automation</h3>
-                    <h3 class="heading">Ops</h3>
                     <h3 class="heading">CI/CD</h3>
+                    <h3 class="heading">DevOps</h3>
+                    <h3 class="heading">Testing and Automation</h3>
                     <h3 class="heading">Responsive UI/UX Design</h3>
                   </div>
                 </div>
